--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 		<div class="postcard">
 			<div class="postcard-header">
 				<h1>My Postcard</h1>
-				<img
-					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
-					alt="4geeks"
-				/>
+				<img src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png" alt="4geeks"/>
 			</div>
 			<div class="postcard-body">
 				<div class="body-left">
